--- a/colibri/index.html
+++ b/colibri/index.html
@@ -17,6 +17,7 @@
         <link rel="shortcut icon" href="fav.ico" type="image/x-icon" />
     </head>
     <body>
+    <div class="sticky">
         <header>
             <div class="header-wrapper flex jc-sa">
                 <div class="header-contacts">
@@ -27,7 +28,7 @@
                     <p class="phone"><a href="tel:88005004718">8-800-500-47-18</a></p>
                     <p class="header-text">Звонки по России бесплатные</p>
                 </div>
-                <button class="button-header popup">Заказать звонок</button>
+                
             </div>
             <div class="dropdown-menu">
                 <button id="menu"><img src="img/menu (3).png" alt=""></button> 
@@ -46,8 +47,10 @@
                     <li><a href="#contact">Контакты</a></li>
                 </ul>
                  <img src="img/logo.png" alt="">
-             </div>
+            </div>
+            <button class="button-header popup">Заказать звонок</button>
         </header>
+    </div>
         <section class="top-form clip">
             <div class="content-wrapper">
             <h1>Таможенное оформление</h1>
@@ -109,8 +112,8 @@
             <div class="content-wrapper">
             <h3>Почему Colibri</h3>
             <div class="why-content flex wrap jc-sb">
-                <div style="text-align: left">
-                <div class="why-item flex">
+                <div class="tabs-fura" style="text-align: left">
+                <div class="why-item flex active">
                     <img src="img/01.png" alt="">
                     <p>Ответственный подход<br><span>к процедуре таможенного оформления</span></p>
                 </div>
@@ -132,7 +135,7 @@
                 </div>
                 <button class="arrow"><img src="img/right-arrow.png" alt=""></button><button class="arrow arrow-2"><img src="img/right-arrow.png" alt=""></button>
             </div>
-            <div>
+            <div class="tabs-content active">
             <div class="why-scroll">
                 <p>Если вы не уверенны, какие именно сертификаты требуется при оформлении Вашего товара, либо у Вас не полный пакет документов, мы проконсультируем, либо самостоятельно оформим:<br>
                         - сертификаты (декларации) в системе ГОСТ Р;<br>
@@ -146,6 +149,15 @@
             <p class="quote">«Не нужно в последний момент геройски хвататься за невозможное. Достаточно вовремя сделать то, что нужно»
                     <br><br>
                     - УИНСТОН ЧЕРЧИЛЬ -</p>
+            </div>
+            <div class="tabs-content">
+                    <div class="why-scroll">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi minima magnam dolor, nulla qui eligendi minus voluptatum suscipit ducimus, incidunt, veritatis laboriosam sit consequuntur laudantium quos? Quam odit quibusdam provident?;</p>
+        
+                    </div>
+                    <p class="quote">«Не нужно в последний момент геройски хвататься за невозможное. Достаточно вовремя сделать то, что нужно»
+                            <br><br>
+                            - УИНСТОН ЧЕРЧИЛЬ -</p>
             </div>
             </div>
             </div>
