--- a/colibri/index.html
+++ b/colibri/index.html
@@ -112,7 +112,7 @@
             <div class="content-wrapper">
             <h3>Почему Colibri</h3>
             <div class="why-content flex wrap jc-sb">
-                <div class="tabs-fura" style="text-align: left">
+                <div class="tabs-fura">
                 <div class="why-item flex active">
                     <img src="img/01.png" alt="">
                     <p>Ответственный подход<br><span>к процедуре таможенного оформления</span></p>
