--- a/colibri/index.html
+++ b/colibri/index.html
@@ -114,23 +114,23 @@
             <div class="why-content flex wrap jc-sb">
                 <div class="tabs-fura">
                 <div class="why-item flex active">
-                    <img src="img/01.png" alt="">
+                    <img src="img/01.png" width="40" height="40" alt="">
                     <p>Ответственный подход<br><span>к процедуре таможенного оформления</span></p>
                 </div>
                 <div class="why-item flex">
-                    <img src="img/02.png" alt="">
+                    <img src="img/02.png" width="40" height="40" alt="">
                     <p>Комфорт взаимодействия<br><span>на всех этапах сотрудничества</span></p>
                 </div>
                 <div class="why-item flex">
-                    <img src="img/03.png" alt="">
+                    <img src="img/03.png" width="40" height="40" alt="">
                     <p>Предварительная проверка<br><span>документов для таможни</span></p>
                 </div>
                 <div class="why-item flex">
-                    <img src="img/04.png" alt="">
+                    <img src="img/04.png" width="40" height="40" alt="">
                     <p>Ответственный подход<br><span>к процедуре таможенного оформления</span></p>
                 </div>
                 <div class="why-item flex">
-                    <img src="img/05.png" alt="">
+                    <img src="img/05.png" width="40" height="40" alt="">
                     <p>Оформление разрешительной докумемнтации<br><span>необходимой для таможенного оформления товара</span></p>
                 </div>
                 <button class="arrow"><img src="img/right-arrow.png" alt=""></button><button class="arrow arrow-2"><img src="img/right-arrow.png" alt=""></button>
