--- a/colibri/index.html
+++ b/colibri/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="css/owl.theme.default.min.css">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/animate.css">
         <title>Colibri</title>
         <meta name="description" content="Colibri">
         <meta name="robots" content="noindex,nofollow">
@@ -91,17 +92,17 @@
         </section>
         <section class="cards"> <a name="preim"></a>
             <div class="content-wrapper flex wrap jc-sa">
-            <div class="header-card">
+            <div class="header-card wow slideInLeft">
                 <img src="img/1_2.png" alt="">
                 <p>Таможенное оформление</p>
                 <span>Колибри  является официальным таможенным представителем работающим со всеми таможенными постами Российской Федерации. Наши специалисты осуществят для Вас таможенное оформление любого товара, обеспечив при этом беспрепятственное прохождение таможни в минимальные сроки.  </span>
             </div>
-            <div class="header-card">
+            <div class="header-card wow bounceInUp">
                 <img src="img/2_2.png" alt="">
                 <p>Таможенный представитель</p>
                 <span>Колибри  является официальным таможенным представителем работающим со всеми таможенными постами Российской Федерации. Наши специалисты осуществят для Вас таможенное оформление любого товара, обеспечив при этом беспрепятственное прохождение таможни в минимальные сроки.  </span>
             </div>
-            <div class="header-card">
+            <div class="header-card wow slideInRight">
                 <img src="img/3_2.png" alt="">
                 <p>Сертификация</p>
                 <span>Прямое сотрудничество с ведущими сертификационными органами и лабораториями позволяет быстро и качественно оформить для Вас любую разрешительную документацию. Доверьте сертификацию Вашего товара специалистам Колибри и спокойно занимайтесь развитием своего бизнеса.</span>
@@ -115,23 +116,23 @@
                 <div class="tabs-fura">
                 <div class="why-item flex active">
                     <img src="img/01.png" width="40" height="40" alt="">
-                    <p>Ответственный подход<br><span>к процедуре таможенного оформления</span></p>
+                    <p class="why-text">Ответственный подход<br><span>к процедуре таможенного оформления</span></p>
                 </div>
                 <div class="why-item flex">
                     <img src="img/02.png" width="40" height="40" alt="">
-                    <p>Комфорт взаимодействия<br><span>на всех этапах сотрудничества</span></p>
+                    <p class="why-text">Комфорт взаимодействия<br><span>на всех этапах сотрудничества</span></p>
                 </div>
                 <div class="why-item flex">
                     <img src="img/03.png" width="40" height="40" alt="">
-                    <p>Предварительная проверка<br><span>документов для таможни</span></p>
+                    <p class="why-text">Предварительная проверка<br><span>документов для таможни</span></p>
                 </div>
                 <div class="why-item flex">
                     <img src="img/04.png" width="40" height="40" alt="">
-                    <p>Ответственный подход<br><span>к процедуре таможенного оформления</span></p>
+                    <p class="why-text">Ответственный подход<br><span>к процедуре таможенного оформления</span></p>
                 </div>
                 <div class="why-item flex">
                     <img src="img/05.png" width="40" height="40" alt="">
-                    <p>Оформление разрешительной докумемнтации<br><span>необходимой для таможенного оформления товара</span></p>
+                    <p class="why-text">Оформление разрешительной докумемнтации<br><span>необходимой для таможенного оформления товара</span></p>
                 </div>
                 <button class="arrow"><img src="img/right-arrow.png" alt=""></button><button class="arrow arrow-2"><img src="img/right-arrow.png" alt=""></button>
             </div>
@@ -166,27 +167,27 @@
             <div class="content-wrapper">
             <h3>Схема работы</h3>
             <div class="flex wrap jc-sa">
-        <div class="item item-long flex">
+        <div class="item item-long flex wow slideInLeft">
             <img src="img/1_1.png" alt="">
             <p class="item-text"><span>1 шаг</span><br>Предварительная консульатция</p>
         </div>
-        <div class="item item-long flex">
+        <div class="item item-long flex wow bounceInUp">
             <img src="img/2_1.png" alt="">
             <p class="item-text"><span>2 шаг</span><br>Расход и согласование таможенных платежей и расходов</p>
         </div>
-        <div class="item item-long flex">
+        <div class="item item-long flex wow slideInRight">
             <img src="img/3_1.png" alt="">
             <p class="item-text"><span>3 шаг</span><br>Анализ и подготовка необходимых документов для подачи таможенной декларации</p>
         </div>
-        <div class="item item-long flex">
+        <div class="item item-long flex wow slideInLeft">
             <img src="img/4_1.png" alt="">
             <p class="item-text"><span>4 шаг</span><br>Процедура таможенное оформление товара</p>
         </div>
-        <div class="item item-long flex">
+        <div class="item item-long flex wow bounceInUp">
             <img src="img/5_1.png" alt="">
             <p class="item-text"><span>5 шаг</span><br>Уведомление о выпуске таможенной декларации</p>
         </div>
-        <div class="item item-long flex">
+        <div class="item item-long flex wow slideInRight">
             <img src="img/6_1.png" alt="">
             <p class="item-text"><span>6 шаг</span><br>Предоставление закрывающих документов</p>
         </div>
@@ -420,7 +421,7 @@
             <div class="content-wrapper">
             <div class="skew-normal">
                 <h3>В цифрах</h3>
-                <div class="flex wrap">
+                <div class="flex wrap jc-center">
                 <p class="skew-text">Каждый<br>сотрудник<br>Колибри оформил<br>не менее<br><span>3000</span><br>таможенных<br>деклараций</p>
                 <p class="skew-text">Каждая вторая<br>декларация<br>выпускается менее<br>чем за<br><span>5</span><br>часов</p>
                 <p class="skew-text">Каждый год<br>возвращаем<br> клиентам не<br> менее <br><span>20 000 000</span><br>рублей обеспечительных<br> платежей</p>
@@ -574,5 +575,9 @@
         <script src="js/jquery-3.4.1.min.js"></script>
         <script src="js/script.js"></script>
         <script src="js/owl.carousel.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+        <script type="text/javascript">
+            new WOW().init();
+            </script>
     </body>
 </html>
