--- a/colibri/index.html
+++ b/colibri/index.html
@@ -254,7 +254,7 @@
             <button class="popup">Консультация</button>
         </section>
 <section class="items-group"><a name="group"></a>
-    <div class="content-wrapper">
+    <div class="content-wrapper wow pulse">
     <h3>Группы товаров<br><span>с которыми работаем</span></h3>
 <div class="flex wrap jc-sa">
 <div class="item flex">
@@ -384,32 +384,32 @@
             <div class="content-wrapper">
              <h3>Что мы предлагаем</h3>
              <div class="flex wrap jc-sa">
-            <div class="offer-item">
+            <div class="offer-item wow bounceInUp">
                 <img src="img/111.png" width="382" height="237" alt="">
                 <p class="offer-text"><span>Оптимизация таможенных платежей</span><br>
                Проверяем наличие всех возможных вариантов снижения таможенных платежей, не противоречащих законодательству РФ и Таможенного Союза. </p>
             </div>
-            <div class="offer-item">
+            <div class="offer-item wow bounceInUp">
                 <img src="img/222.png" width="382" height="237" alt="">
-                <p class="offer-text"><span>Персональный менеджер</span><br>
+                <p class="offer-text "><span>Персональный менеджер</span><br>
                 За Вашей компанией будет закреплен персональный специалист.</p>
             </div>
-            <div class="offer-item">
+            <div class="offer-item wow bounceInUp">
                 <img src="img/333.png" width="382" height="237" alt="">
                 <p class="offer-text"><span>Персональный архив</span><br>
                 Предоставим копию любых документов, за весь период сотрудничества.   </p>
             </div>
-            <div class="offer-item">
+            <div class="offer-item wow bounceInDown">
                 <img src="img/444.png" width="382" height="237" alt="">
                 <p class="offer-text"><span>Бесплатная консультативная поддержка на всём протяжении сотрудничества </span><br>
                 Вы не платите за то, что мы отвечаем на Ваши вопросы, сколько бы их не было.</p>
             </div>
-            <div class="offer-item">
+            <div class="offer-item wow bounceInDown">
                 <img src="img/555.png" width="382" height="237" alt="">
                 <p class="offer-text"><span>Быстрая сертификация</span><br>
                 Взаимодействие с ведущими сертификационными органами и лабораториями, позволяет в кратчайшие сроки оформить любую разрешительную </p>
             </div>
-            <div class="offer-item">
+            <div class="offer-item wow bounceInDown">
                 <img src="img/454.png" width="382" height="237" alt="">
                 <p class="offer-text"><span>Минимум рисков</span><br>
                 Колоссальный опыт наших специалистов по таможенному оформлению полностью исключает возможности ошибки при подаче ДТ.</p>
