--- a/colibri/index.html
+++ b/colibri/index.html
@@ -571,6 +571,7 @@
                 <button class="js__send_call_request">Отправить</button>
             </div>
         </div>
+        <div class="wow fadeIn main-logo"><img src="img/main-logo.png" width="300" height="auto" alt=""></div>
         <div class="overlay"></div>
         <script src="js/jquery-3.4.1.min.js"></script>
         <script src="js/script.js"></script>
