--- a/colibri/index.html
+++ b/colibri/index.html
@@ -47,7 +47,7 @@
                     <li><a href="#actions">Акции</a></li>
                     <li><a href="#contact">Контакты</a></li>
                 </ul>
-                 <img src="img/logo.png" alt="">
+                 <img class="little-logo" src="img/logo.png" alt="">
             </div>
             <button class="button-header popup">Заказать звонок</button>
         </header>
