--- a/colibri/index.html
+++ b/colibri/index.html
@@ -90,7 +90,7 @@
             <button class="text-button js__send_active_tab">Рассчитать</button>
         </div>
         </section>
-        <section class="cards"> <a name="preim"></a>
+        <section class="cards"> <a id="preim"></a>
             <div class="content-wrapper flex wrap jc-sa">
             <div class="header-card wow slideInLeft">
                 <img src="img/1_2.png" alt="">
@@ -109,7 +109,7 @@
             </div>
         </div>
         </section>
-        <section class="why clip clip-top"><a name="why"></a>
+        <section class="why clip clip-top"><a id="why"></a>
             <div class="content-wrapper">
             <h3>Почему Colibri</h3>
             <div class="why-content flex wrap jc-sb">
@@ -163,7 +163,7 @@
             </div>
             </div>
         </section>
-        <section class="scheme"><a name="scheme"></a>
+        <section class="scheme"><a id="scheme"></a>
             <div class="content-wrapper">
             <h3>Схема работы</h3>
             <div class="flex wrap jc-sa">
@@ -194,7 +194,7 @@
         </div>
         </div>
         </section>
-        <section class="gallery clip clip-top"><a name="last"></a>
+        <section class="gallery clip clip-top"><a id="last"></a>
             <div class="content-wrapper">
             <h3>Последняя выпущенная декларация</h3>
 
@@ -243,17 +243,17 @@
         </div>
         </section>
 
-        <section class="map"> <a name="we-work"></a>
+        <section class="map"> <a id="we-work"></a>
             <h3>Таможенные посты <br><span>с которыми мы работаем</span></h3>
             <div class="clip clip-top">
             <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A7b7bcde6eaeb7f51213cb61daab5f2c65c5e38a954550cf277cd0f5076a18383&amp;source=constructor" width="100%" height="500" frameborder="0"></iframe>
             </div>
         </section>
-        <section class="consult clip clip-top"><a name="get"></a>
+        <section class="consult clip clip-top"><a id="get"></a>
             <h3>Получить бесплатную консультацию</h3>
             <button class="popup">Консультация</button>
         </section>
-<section class="items-group"><a name="group"></a>
+<section class="items-group"><a id="group"></a>
     <div class="content-wrapper wow pulse">
     <h3>Группы товаров<br><span>с которыми работаем</span></h3>
 <div class="flex wrap jc-sa">
@@ -380,7 +380,7 @@
 </div>
 </div>
 </section>
-        <section class="offer clip clip-top"><a name="so-what"></a>
+        <section class="offer clip clip-top"><a id="so-what"></a>
             <div class="content-wrapper">
              <h3>Что мы предлагаем</h3>
              <div class="flex wrap jc-sa">
@@ -417,7 +417,7 @@
         </div>
         </div>
         </section>
-        <section class="skew"><a name="cifri"></a>
+        <section class="skew"><a id="cifri"></a>
             <div class="content-wrapper">
             <div class="skew-normal">
                 <h3>В цифрах</h3>
@@ -445,7 +445,7 @@
             <button class="js__send_question">Отправить</button>
             </div>
         </section>
-        <section class="feedback"><a name="feedback"></a>
+        <section class="feedback"><a id="feedback"></a>
             <div class="content-wrapper">
             <h3>Отзывы</h3>
             <div class="owl-carousel slide-two owl-theme">
@@ -487,7 +487,7 @@
     </div>
         </div>
         </section>
-        <section class="actions clip clip-top"><a name="actions"></a>
+        <section class="actions clip clip-top"><a id="actions"></a>
             <h3>Акция</h3><br>
             <p>Комплексное таможенное оформление</p><br>
             <span>за  11 990</span><br>
@@ -545,7 +545,7 @@
             </div>
             </div>
         </section>
-        <footer class="clip-top"><a name="contact"></a>
+        <footer class="clip-top"><a id="contact"></a>
             <div class="content-wrapper">
             <img src="img/logo_2.png" alt="">
             <div class="footer-contact flex wrap jc-sa">
