--- a/english_school/index.html
+++ b/english_school/index.html
@@ -110,7 +110,7 @@
                         на основе сюжетных историй,<br> сценок и песен,<br> делающих процесс <br> обучения английскому <br>
                         языку живым <br>и интересным. </p>
                     <img src="img/girafe1.png" class="wow bounceInLeft" style="position: absolute; top: 42%; left: 24%;">
-                    <button class="button-more button-level level1">Подробнее</button>
+                    <button class="button-more button-level">Подробнее</button>
                 </div>
             </div>
             <div class="card">
@@ -124,7 +124,7 @@
                         задания onlinec Pupil’sPracticeKit с видеосюжетами и интерактивными заданиями
                         превратит выполнение домашнего задания в увлекательное занятие.</p>
 
-                    <button class="button-more button-level level2">Подробнее</button>
+                    <button class="button-more button-level">Подробнее</button>
                 </div>
             </div>
             <div class="card bg-girafe2">
@@ -136,7 +136,7 @@
                         Курс отражает современные тенденции и требования к обучению практическому<br> владению английским <br>языком в повседневном <br>общении и включает<br>
                         в себя аутентичные видеоролики<br> BBC и<br> интерактивные <br>задания </p>
                     <img src="img/girafe2.png" class="wow bounceInRight" style="position: absolute;top: 49%; left: 62%;">
-                    <button class="button-more button-level level3">Подробнее</button>
+                    <button class="button-more button-level">Подробнее</button>
                 </div>
             </div>
         </div>
@@ -177,47 +177,47 @@
             <div class="teacher-item">
                 <div class="video"><iframe width="378" height="275" src="img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <div class="teacher-name" data-name="Alyona_Kozlova">Alyona Kozlova</div>
-                <button class="button-more teachers-text">Подробнее</button>
+                <button class="button-more">Подробнее</button>
             </div>
             <div class="teacher-item">
                 <div class="video"><iframe width="378" height="275" src="img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <div class="teacher-name" data-name="Ekaterina_Ryabova">Ekaterina Ryabova</div>
-                <button class="button-more teachers-text">Подробнее</button>
+                <button class="button-more">Подробнее</button>
             </div>
             <div class="teacher-item">
                 <div class="video"><iframe width="378" height="275" src="img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <div class="teacher-name" data-name="Jerry_Orphe">Jerry Orphe</div>
-                <button class="button-more teachers-text">Подробнее</button>
+                <button class="button-more">Подробнее</button>
             </div>
             <div class="teacher-item">
                 <div class="video"><iframe width="378" height="275" src="img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <div class="teacher-name" data-name="Dasha_Krutkova">Dasha Krutkova</div>
-                <button class="button-more teachers-text">Подробнее</button>
+                <button class="button-more">Подробнее</button>
             </div>
             <div class="teacher-item">
                 <div class="video"><iframe width="378" height="275" src="img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <div class="teacher-name" data-name="Alyona_Chernomirdyna">Alyona Chernomirdyna</div>
-                <button class="button-more teachers-text">Подробнее</button>
+                <button class="button-more">Подробнее</button>
             </div>
             <div class="teacher-item">
                 <div class="video"><iframe width="378" height="275" src="img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <div class="teacher-name" data-name="Anastasia_Ovchinnikova">Anastasia Ovchinnikova</div>
-                <button class="button-more teachers-text">Подробнее</button>
+                <button class="button-more">Подробнее</button>
             </div>
             <div class="teacher-item">
                 <div class="video"><iframe width="378" height="275" src="img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <div class="teacher-name" data-name="Yulia_Klimasheva">Yulia Klimasheva</div>
-                <button class="button-more teachers-text">Подробнее</button>
+                <button class="button-more">Подробнее</button>
             </div>
             <div class="teacher-item">
                 <div class="video"><iframe width="378" height="275" src="img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <div class="teacher-name" data-name="Valeria_Azarova">Valeria Azarova</div>
-                <button class="button-more teachers-text">Подробнее</button>
+                <button class="button-more">Подробнее</button>
             </div>
             <div class="teacher-item">
                 <div class="video"><iframe width="378" height="275" src="img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <div class="teacher-name" data-name="Daria_Skachilkina">Daria Skachilkina</div>
-                <button class="button-more teachers-text">Подробнее</button>
+                <button class="button-more">Подробнее</button>
             </div>
         </div>
     </section>
@@ -259,8 +259,7 @@
         <div class="wrapper-content flex jc-flex wrap">
             <div class="process-item flex">
                 <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="85mm" height="85mm" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
-                     viewBox="0 0 8500 8500"
-                     xmlns:xlink="http://www.w3.org/1999/xlink">
+                     viewBox="0 0 8500 8500">
  <g id="Слой_x0020_1">
      <metadata id="CorelCorpID_0Corel-Layer"/>
      <g id="_1795999042944">
@@ -274,8 +273,7 @@
             </div>
             <div class="process-item flex">
                 <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="85mm" height="85mm" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
-                     viewBox="0 0 8500 8500"
-                     xmlns:xlink="http://www.w3.org/1999/xlink">
+                     viewBox="0 0 8500 8500">
       <g id="Слой_x0020_1">
           <metadata id="CorelCorpID_0Corel-Layer"/>
           <g id="_1796123007040">
@@ -289,8 +287,7 @@
             </div>
             <div class="process-item flex">
                 <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="85mm" height="85mm" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
-                     viewBox="0 0 8500 8500"
-                     xmlns:xlink="http://www.w3.org/1999/xlink">
+                     viewBox="0 0 8500 8500">
      <g id="Слой_x0020_1">
          <metadata id="CorelCorpID_0Corel-Layer"/>
          <g id="_1796000003184">
@@ -304,8 +301,7 @@
             </div>
             <div class="process-item flex">
                 <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="85mm" height="85mm" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
-                     viewBox="0 0 8500 8500"
-                     xmlns:xlink="http://www.w3.org/1999/xlink">
+                     viewBox="0 0 8500 8500">
      <g id="Слой_x0020_1">
          <metadata id="CorelCorpID_0Corel-Layer"/>
          <g id="_1796001535264">
@@ -319,8 +315,7 @@
             </div>
             <div class="process-item flex">
                 <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="85mm" height="85mm" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
-                     viewBox="0 0 8500 8500"
-                     xmlns:xlink="http://www.w3.org/1999/xlink">
+                     viewBox="0 0 8500 8500">
      <g id="Слой_x0020_1">
          <metadata id="CorelCorpID_0Corel-Layer"/>
          <g id="_1796001539744">
@@ -334,8 +329,7 @@
             </div>
             <div class="process-item flex">
                 <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="85mm" height="85mm" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
-                     viewBox="0 0 8500 8500"
-                     xmlns:xlink="http://www.w3.org/1999/xlink">
+                     viewBox="0 0 8500 8500">
  <g id="Слой_x0020_1">
      <metadata id="CorelCorpID_0Corel-Layer"/>
      <g id="_1796123019456">
@@ -349,8 +343,7 @@
             </div>
             <div class="process-item flex">
                 <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="85mm" height="85mm" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
-                     viewBox="0 0 8500 8500"
-                     xmlns:xlink="http://www.w3.org/1999/xlink">
+                     viewBox="0 0 8500 8500">
  <g id="Слой_x0020_1">
      <metadata id="CorelCorpID_0Corel-Layer"/>
      <g id="_1796119647536">
@@ -364,8 +357,7 @@
             </div>
             <div class="process-item flex">
                 <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="85mm" height="85mm" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
-                     viewBox="0 0 8500 8500"
-                     xmlns:xlink="http://www.w3.org/1999/xlink">
+                     viewBox="0 0 8500 8500">
  <g id="Слой_x0020_1">
      <metadata id="CorelCorpID_0Corel-Layer"/>
      <g id="_1796120629088">
@@ -379,8 +371,7 @@
             </div>
             <div class="process-item flex">
                 <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="85mm" height="85mm" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
-                     viewBox="0 0 8500 8500"
-                     xmlns:xlink="http://www.w3.org/1999/xlink">
+                     viewBox="0 0 8500 8500">
  <g id="Слой_x0020_1">
      <metadata id="CorelCorpID_0Corel-Layer"/>
      <g id="_1796131872672">
@@ -394,8 +385,7 @@
             </div>
             <div class="process-item flex">
                 <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="85mm" height="85mm" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
-                     viewBox="0 0 8500 8500"
-                     xmlns:xlink="http://www.w3.org/1999/xlink">
+                     viewBox="0 0 8500 8500">
      <g id="Слой_x0020_1">
          <metadata id="CorelCorpID_0Corel-Layer"/>
          <g id="_1796131884704">
@@ -409,8 +399,7 @@
             </div>
             <div class="process-item flex">
                 <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="85mm" height="85mm" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
-                     viewBox="0 0 8500 8500"
-                     xmlns:xlink="http://www.w3.org/1999/xlink">
+                     viewBox="0 0 8500 8500">
  <g id="Слой_x0020_1">
      <metadata id="CorelCorpID_0Corel-Layer"/>
      <g id="_1796131881792">
@@ -441,7 +430,7 @@
     <section class="advantages bg-orange"><a id="preim"></a>
         <h3>Наши преимущества</h3>
         <div class="wrapper-content flex jc-flex">
-            <div class="advantages-item"><img src="img/420216.png" height="115" alt=""><span>Обучение с любого уровня</span></div>
+            <div class="advantages-item"><img src="img/420216.png" alt=""><span>Обучение с любого уровня</span></div>
             <div class="advantages-item"><img src="img/appointment.png" alt=""><span>Уроки по будням и выходным</span></div>
             <div class="advantages-item"><img src="img/cap.png" alt=""><span>Удобное расположение</span></div>
             <div class="advantages-item"><img src="img/819865.png" alt=""><span>Повышение успеваемости</span></div>
