--- a/colibri/index.html
+++ b/colibri/index.html
@@ -254,7 +254,7 @@
             <button class="popup">Консультация</button>
         </section>
 <section class="items-group"><a id="group"></a>
-    <div class="content-wrapper wow pulse">
+    <div class="content-wrapper">
     <h3>Группы товаров<br><span>с которыми работаем</span></h3>
 <div class="flex wrap jc-sa">
 <div class="item flex">
