--- a/english_school/index.html
+++ b/english_school/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/animate.css">
         <link rel="stylesheet" href="css/owl.carousel.min.css">
+        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
         <title>Level Eleven</title>
     </head> 
     <body>
