--- a/english_school/index.html
+++ b/english_school/index.html
@@ -1297,10 +1297,10 @@
                 </div>
             </div>
             <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-            <script src="../js/owl.carousel.min.js"></script>
-            <script src="../js/jquery.maskedinput.min.js"></script>
-            <script src="../js/script.js"></script>
-            <script src="../js/wow.js"></script>
+            <script src="js/owl.carousel.min.js"></script>
+            <script src="js/jquery.maskedinput.min.js"></script>
+            <script src="js/script.js"></script>
+            <script src="js/wow.js"></script>
             <script>
                 new WOW().init();
             </script>
